--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "pretty-cache-header": "^1.0.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-router": "7.9.3",
-    "react-scan": "^0.4.3",
+    "react-router": "7.10.1",
     "remix-utils": "^9.0.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.11"
@@ -45,8 +44,8 @@
     "@cloudflare/vite-plugin": "^1.13.8",
     "@eslint/compat": "^1.4.0",
     "@eslint/js": "^9.36.0",
-    "@mcansh/vite-plugin-svg-sprite": "^0.7.1",
-    "@react-router/dev": "7.9.3",
+    "@mcansh/vite-plugin-svg-sprite": "https://pkg.pr.new/mcansh/vite-plugin-svg-sprite/@mcansh/vite-plugin-svg-sprite@58",
+    "@react-router/dev": "7.10.1",
     "@tailwindcss/vite": "4.1.14",
     "@total-typescript/tsconfig": "^1.0.4",
     "@types/node": "^24.6.2",
@@ -56,13 +55,14 @@
     "@typescript-eslint/parser": "^8.45.0",
     "@typescript/lib-dom": "npm:@types/web@^0.0.272",
     "@typescript/native-preview": "7.0.0-dev.20251002.1",
-    "babel-plugin-react-compiler": "19.1.0-rc.3",
+    "babel-plugin-react-compiler": "1.0.0",
+    "baseline-browser-mapping": "^2.9.5",
     "eslint": "^9.36.0",
     "eslint-config-flat-gitignore": "^2.1.0",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prefer-let": "^4.0.0",
-    "eslint-plugin-react-hooks": "6.1.0",
+    "eslint-plugin-react-hooks": "7.0.1",
     "husky": "^9.1.7",
     "knip": "^5.64.1",
     "lightningcss": "^1.30.2",
@@ -75,7 +75,7 @@
     "tailwindcss": "4.1.14",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "npm:rolldown-vite@7.1.15",
+    "vite": "8.0.0-beta.2",
     "vite-plugin-babel": "^1.3.2",
     "wrangler": "^4.40.3",
     "zx": "^8.8.5"
@@ -83,5 +83,5 @@
   "engines": {
     "node": ">=22"
   },
-  "packageManager": "pnpm@10.17.1+sha512.17c560fca4867ae9473a3899ad84a88334914f379be46d455cbf92e5cf4b39d34985d452d2583baf19967fa76cb5c17bc9e245529d0b98745721aa7200ecaf7a"
+  "packageManager": "pnpm@10.25.0+sha512.5e82639027af37cf832061bcc6d639c219634488e0f2baebe785028a793de7b525ffcd3f7ff574f5e9860654e098fe852ba8ac5dd5cefe1767d23a020a92f501"
 }
